# mcp-servers

./: README.md
dbs/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
dbs/src/: __init__.py  server.py
indico/: Dockerfile  README.md  entrypoint.py
